# AFSA

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: main.py
can/: ids_engine.py  simulator.py
dashboard/: index.html
dashboard/src/: App.jsx  sampleData.js  styles.css
docs/: API.md  ARCHITECTURE.md
firmware/: analyzer.py  vuln_scanner.py
scripts/: lint.sh  run_tests.sh
tests/: test_backend.py  test_can_ids.py  test_firmware.py  test_validations.py
tests/data/: sample.hex
